# qamqp

./: CMakeLists.txt  qamqp.pri
src/: CMakeLists.txt  qamqpchannelhash.cpp  qamqpchannelhash_p.h  qamqpclient.cpp  qamqpclient.h  qamqpexchange.cpp  qamqpframe.cpp  qamqpglobal.h  qamqptable.cpp  qamqptable.h  src.pro
tests/: CMakeLists.txt  certs.qrc  main.cpp  tests.pro  tst_qamqpchannel.cpp  tst_qamqpchannel.h  tst_qamqpclient.cpp  tst_qamqpclient.h  tst_qamqpexchange.cpp  tst_qamqpexchange.h  tst_qamqpqueue.cpp  tst_qamqpqueue.h
tests/auto/qamqpclient/: tst_qamqpclient.cpp
tests/auto/qamqpqueue/: tst_qamqpqueue.cpp
tests/common/: qamqptestcase.h
